Fixed black area. Made container overflow auto

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -231,6 +231,7 @@ header h1{
   margin-top:-20px;
   width:100%;
   height:100%;
+  overflow: auto;
 }
 
 .alt{
